@@ -9,6 +9,7 @@
     identifier: LGPL-2.1
     uri: http://www.horde.org/licenses/lgpl21
   notes: |
+    [rla] Add an init command to start new apps or libraries.
     [jan] Remove next-sentinel release task.
     [jan] In the 'update' command, update composer.json from .horde.yml.
     [jan] In the 'update' command, update package.xml from .horde.yml.
